--- a/.github/workflows/java_build_and_docker.yml
+++ b/.github/workflows/java_build_and_docker.yml
@@ -15,8 +15,11 @@ jobs:
 
     - name: Set up JDK
       uses: actions/setup-java@v3
-      with:
-        java-version: '1.8'
+    with:
+      distribution: 'temurin'
+      java-version: '1.8'
+
+
 
     - name: Make gradlew executable
       run: chmod +x gradlew
